Cleanup JMH-Benchmarks Module