@@ -36,7 +36,6 @@ import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.Warmup;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -83,8 +82,8 @@ public class TopicsImageZonalOutageBenchmark {
                         setTopicId(topicId).
                         setReplicas(Arrays.stream(partitionRegistration.replicas).boxed().collect(Collectors.toList())).
                         setIsr(newIsr).
-                        setRemovingReplicas(Collections.emptyList()).
-                        setAddingReplicas(Collections.emptyList()).
+                        setRemovingReplicas(List.of()).
+                        setAddingReplicas(List.of()).
                         setLeader(newIsr.get(0)));
                 }
             })
